--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </header>
     <main>
-        <img id="agac" src="image.jpg" alt="">
+        <img id="agac" src="image1.jpg" alt="">
         <div>
             <h2>HOŞGELDİNİZ</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non qui explicabo eius nisi nam iure ut totam soluta molestiae, voluptate quis voluptatem, harum quasi vitae accusamus vero, eligendi laudantium Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque eveniet iusto harum, autem vel inventore ipsum perspiciatis quidem corporis molestias eum vitae nihil sunt tempora aliquid! Excepturi, itaque esse. Deserunt!</p>
