--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>WEB TASARIM</h1>
-        <ul>
-            <li><a href="#">Anasayfa</a></li>
-            <li><a href="#">Hakkında</a></li>
-            <li><a href="#">Çalışmalar</a></li>
-            <li><a href="#">İletişim</a></li>
-        </ul>
-    </header>
+    <div>
+        <header id="baslık">
+            <div class="head1">
+                <h1>WEB TASARIM</h1>
+            </div>
+            <div class="head2">
+                <ul>
+                    <li><a href="#">Anasayfa</a></li>
+                    <li><a href="#">Hakkında</a></li>
+                    <li><a href="#">Çalışmalar</a></li>
+                    <li><a href="#">İletişim</a></li>
+                </ul>
+            </div>
+        
+         </header>
+    </div>
     <main>
         <img id="agac" src="image1.jpg" alt="">
         <div>
